k8s/site/zcp-portal-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    #ingress.bluemix.net/ALB-ID: private-cr7a9b181c82674f478e461c648c3000da-alb1
    ingress.bluemix.net/redirect-to-https: "True"
  name: zcp-portal-ui-ingress
  namespace: zcp-system
spec:
  tls:
  - hosts:
    - iam.hklaw.co.kr
    secretName: hklaw-co-kr-cert
  rules:
  - host: iam.hklaw.co.kr
    http:
      paths:
      - backend:
          serviceName: zcp-portal-ui
          servicePort: 80
